--- a/app/scss/base/_typography.scss
+++ b/app/scss/base/_typography.scss
@@ -7,21 +7,21 @@
 
 @font-face {
 	font-family: "OpenSans";
-    src: url("../fonts/OpenSans-Light.ttf");
+    src: url("../fonts/OpenSans-Light.ttf") format('truetype');
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
 	font-family: "OpenSansItalic";
-    src: url("../fonts/OpenSans-LightItalic.ttf");
+    src: url("../fonts/OpenSans-LightItalic.ttf") format('truetype');
     font-style: normal;
     font-weight: normal;
 }
 
 @font-face {
 	font-family: "OpenSansBold";
-    src: url("../fonts/OpenSans-Bold.ttf");
+    src: url("../fonts/OpenSans-Bold.ttf") format('truetype');
     font-style: normal;
     font-weight: normal;
 }
